Fixing issue with text overlaying images on tablet sizes.

--- a/css/partials/_product.scss
+++ b/css/partials/_product.scss
@@ -51,4 +51,20 @@ header {
 	&:nth-of-type(3n+1) {
 		margin-left:0;
 	}
+	@media (min-width: 550px) {
+		margin-bottom: 12rem;
+		.product-info {
+			.product-name {
+				font-size: 1.6rem;
+			}
+		}
+	}
+	@media (min-width: 1000px) {
+		margin-bottom: 10rem;
+		.product-info {
+			.product-name {
+				font-size: 2rem;
+			}
+		}
+	}
 }
